# Melvil

./: .gitignore  README.md  active_reading.csv  helper.py  index.html  install.sh  main.json  main.py  mortimer.json  pyproject.toml  setup.py
book/: book.py
booklist_melvil.egg-info/: PKG-INFO
melvil/: README.md  book.py  booklist.py  helper.py  main.py  melvil.py  new.csv  path.txt  pyproject.toml  search.py  setup.py  test_input.txt
melvil/book/: book.py
melvil/booklist/: booklist.py
melvil/helper/: helper.py
melvil/melvil/: pyproject.toml  readme.md
melvil/melvil/booklist/: booklist.py
melvil/melvil/helper/: helper.py
melvil/melvil/melvil/: melvil.py
melvil/melvil/reading/: reading.py
melvil/melvil/search/: search.py
melvil/reading/: reading.py
melvil/search/: search.py
melvil/tests/: test_mortimer.py
melvil_booklist/: README.md  book.py  booklist.py  helper.py  melvil_booklist.py  reading.py  search.py  setup.py
melvil_booklist/booklist/: booklist.py
melvil_booklist/helper/: helper.py
melvil_booklist/reading/: reading.py
mortimer/: book.py  booklist.py  helper.py  main.py  search.py
mortimer/mortimer/: helper.py  main.py
sandbox/: test_inquirer.py
src/: main.py  melvil.py
src/appFile/: appFile.py
src/book/: book.py
src/booklist/: booklist.py
src/reading/: reading.py
src/search/: search.py
test/: echo  help.json  init_test.txt  pty_example.py  test_app.py  test_helper.py  typescript
test/.pytest_cache/v/cache/: lastfailed  nodeids
