[tool.poetry]
name = "melvil"
version = "0.1.0"
description = ""
authors = ["Sean <sean14520@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mortimer = "main:app"
helper = "helper:*"
search = "search:*"
booklist = "booklist:*"
book = "book:*"


[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.6.1"}
thefuzz = "^0.19.0"
inquirer = "^2.10.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"