[tool.poetry]
name = "melvil"
version = "0.1.0"
description = ""
authors = ["Sean <sean14520@gmail.com>"]
readme="README.md"

[tool.poetry.scripts]
melvil = "main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.6.1"}
inquirer = "^2.10.0"
thefuzz = "^0.19.0"
requests = "^2.28.1"
bs4 = "^0.0.1"
tqdm = "^4.64.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
