[tool.poetry]
name = "melvil"
version = "0.1.0"
description = ""
authors = ["Sean <sean14520@gmail.com>"]
readme="README.md"

[tool.poetry.scripts]
melvil = "melvil.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
